# people_mcp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
server/: Dockerfile  pyproject.toml
server/config/: fx_rates.yaml
server/data/: people-list-export.csv
server/eval/: cases.yaml  run_eval.py
server/people_mcp/: db.py  errors.py  ingest.py  prompts.py  salary.py  schema.py  server.py
server/people_mcp/tools/: aggregate_people.py  get_org_subtree.py  get_person.py  list_people.py
server/tests/: conftest.py  test_db.py  test_errors.py  test_ingest.py  test_prompts.py  test_salary.py  test_schema_resource.py  test_tool_aggregate.py  test_tool_get_person.py  test_tool_list_people.py  test_tool_org_subtree.py
web/: .dockerignore  package-lock.json  package.json  vitest.config.ts
web/app/: page.tsx
web/app/api/chat/: route.ts
web/app/api/conversations/: route.ts
web/app/api/conversations/[id]/: route.ts
web/components/: Chat.tsx  Composer.tsx  Message.tsx  Sidebar.tsx  Suggestions.tsx  ToolCallPill.tsx
web/components/__tests__/: Composer.test.tsx
web/lib/: anthropic.ts  chat-db.ts  history.ts  log.ts  mcp-client.ts  prompts.ts  replay.ts  titler.ts  types.ts
web/lib/__tests__/: chat-db.test.ts  history.test.ts  prompts.test.ts  replay.test.ts  smoke.test.ts  titler.test.ts
