[project]
name = "people-mcp"
version = "0.1.0"
description = "MCP server exposing people records over Streamable HTTP"
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]>=1.2.0",
  "fastmcp>=0.2.0",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
